--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "description": "Applies red nav bar to UKG Telestaff NPR '-uat-tsc' sites to mark non-production and prevent unintended changes.",
   "content_scripts": [
     {
-      "matches": ["*://*.npr.mykronos.com/*"],
+      "matches": ["*://*.mykronos.com/*"],
       "js": ["content.js"]
     }
   ],
